# serialization

./: README.md  fips.yml  meson.build
include/: lazy.hpp  network.hpp  optional.hpp  reader.hpp  sizer.hpp  writer.hpp
samples/: ReaderApp.cpp  Types.h  WriterApp.cpp  meson.build
subprojects/: date.wrap
test/: LazyTypeTest.cpp  NetworkTest.cpp  ReaderTest.cpp  SerializationTestTypes.hpp  SizerTest.cpp  WriterTest.cpp  meson.build
